css/grid.css
@import url(http://fonts.googleapis.com/css?family=Roboto);

html {
    height:100%;
    overflow: hidden;
}

body {
    height:100%;
    width:100%;
    padding:0;
    margin:0;
    font-size:20px;
    font-family: 'Roboto', sans-serif;
    text-align:center;
    perspective: 1px;
    transform-style: preserve-3d;
    overflow-y: scroll;
    overflow-x: hidden;
}

.slide {
  position: relative;
  padding: 25vh 10%;
  min-height: 100vh;
  width: 100vw;
  box-sizing: border-box;
	transform-style: inherit;
}

.slide:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left:0;
  right:0;
}

#slide1:before {
  background-image: url('../img/parallax.jpg');
  transform: translateZ(-1px) scale(2);
  z-index:-1;
}

#intro {
    height: 100%;
    width: 100%; 
    /*background:#FCFCFC;*/
}

#floating-intro {
    width:100%;
    height:30%;
    left: 50%;
    top: 50%;
    margin-left: -50%;
    margin-top: -200px;
    text-align: center;
    position: absolute;
    font-size:70px;
    color:#333;
    transform: translateZ(-1.5px) scale(2);
    z-index:-1;
    /*background-color: blue;*/
}

#floating-intro ul {
    margin-top:-55px;
    color:#333;
    font-size:50px;
    text-align:center;
}

h2 {
    margin-top: 0;
}

#description {
    width:94%;
    padding: 3%;
    background-color:#fff;
    color:#555;
    text-align:center;
    overflow: hidden;
}

h1 {
  color: #345274;
  font-size: 32px;
  font-weight: 300;
  letter-spacing: 0.08em;
  text-align: center;
  text-transform: uppercase;
}

#description p {

}

#albums-intro {
    text-align:center;
    color:#333;
    padding: 40px;
    overflow: hidden;
    background-color:#fff;
}

#albums {
    text-align:center;
    width:100%;
    position:relative;
    overflow: hidden;
    padding:0px 0px 20px 0px;
    background-color:#fff;
}

#videos-intro
{
    text-align:center;
    color:#333;
    padding:20px 0px 40px 0px;
    overflow: hidden;
    z-index:-1;
}

#videos
{
    text-align:center;
    width:100%;
    position:relative;
    overflow: hidden;
    padding:0px 0px 20px 0px;
}

#links {
    background-color:blue;
    text-align:center;
    padding: 30px;
    overflow: hidden;
}

.grid-container {
    width: 90%;
    max-width: 1440px;
    margin:0 auto;
}

#square-padding { 
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 33.3%;
    padding: 2px 2px 2px 2px;
    float:left;
}

.square {
    width: 100%;
    margin:auto;
    padding-bottom:100%;
    position:relative;
    background-color:#1E1E1E;
    overflow:hidden;
    -moz-transform:translate3d(0,0,0);
    -webkit-transform:translate3d(0,0,0);
    transform:translate3d(0,0,0);
    -moz-transition:all .2s cubic-bezier(.4,0,.2,1);
    -webkit-transition:all .2s cubic-bezier(.4,0,.2,1);
    transition:all .2s cubic-bezier(.4,0,.2,1)
}

.square:hover {
    -moz-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
    -webkit-box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
    box-shadow:0 17px 50px 0 rgba(0,0,0,.19);
    position:relative;
    z-index:100
}

.darken-container {
    position:absolute;
    height:100%;
    width:100%;
}

.waves-container {
    position:absolute;
    width:100%;
    height:100%;
    text-align:center;
}

.circle {
    position: absolute;
    background-color: #fff;
    opacity: 0.5;
    border-radius: 100%;
    height: 1px;
    width: 1px;
}

.shadow {
    color:#fff;
    display:block;
    overflow:hidden;
    position:relative;
    -moz-transition:all .2s;
    -webkit-transition:all .2s;
    transition:all .2s;
    -moz-transform:translate3d(0,0,0);
    -webkit-transform:translate3d(0,0,0);
    transform:translate3d(0,0,0)
}

.shadow:hover {
    -moz-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
    -webkit-box-shadow:0 12px 15px 0 rgba(0,0,0,.24);
    box-shadow:0 12px 15px 0 rgba(0,0,0,.24)
}

.darken-b {
    background: rgba(51, 181, 229, 0.70);
    padding: 0;
    opacity: 0;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s linear;
    -ms-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
}

.darken-r {
    background: rgba(255, 68, 68, 0.70);
    padding: 0;
    opacity: 0;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s linear;
    -ms-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
}

.darken-y {
    background: rgba(255, 187, 51, 0.70);
    padding: 0;
    opacity: 0;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s linear;
    -ms-transition: all 0.3s linear;
    -o-transition: all 0.3s linear;
    transition: all 0.3s linear;
}

.darken:hover {
    opacity: 1;
}

.table{
    display:table;
    width:100%;
    height:100%;
}

.table-cell{
    display:table-cell;
    vertical-align:middle;
}

/*  For list */
ul{
    text-align:left;
    margin:5% 0 0;
    padding:0;
    list-style-position:inside;
}
li{
    margin: 0 0 0 5%;
    padding:0;
}

.content .rs{
    width:auto;
    height:auto;
    max-height:90%;
    max-width:100%;
}

.bg{
    background-position:center center;
    background-repeat:no-repeat;
    background-size:cover; /* you change this to "contain" if you don't want the images to be cropped */
    color:#fff;
}

.img1{
    background-image: url('../img/1.jpg');
}
.img2{
    background-image: url('../img/2.jpg');
}
.img3{
    background-image: url('../img/3.jpg');
}

